Explicitly disable style sharing for form controls https://bugs.webkit.org/show_bug.cgi?id=237236

Reviewed by Antti Koivisto.

There was a typo introduced in bug 153768 and bug 138769, which essentially disables
style sharing completely for form controls. Let's make that explicit.

* style/StyleSharingResolver.cpp:
(WebCore::Style::SharingResolver::canShareStyleWithControl): Removed.
(WebCore::Style::SharingResolver::canShareStyleWithElement const):



Canonical link: https://commits.webkit.org/247913@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290640 268f45cc-cd09-0410-ab3c-d52691b4dbfc